enabling a client to move from their profile back to their home page

--- a/client_profile.html
+++ b/client_profile.html
@@ -10,7 +10,9 @@
 
   <!-- Sidebar -->
   <aside class="w-64 bg-orange-600 text-white flex flex-col p-6">
-    <h1 class="text-2xl font-bold mb-10">VENUE<span class="text-yellow-200">WISE</span></h1>
+    <a href="client_home.html">
+    <h1 class="text-2xl font-bold mb-10"> VENUE<span class="text-yellow-200">WISE</span></h1>
+    </a>
     <h2 onclick="refreshProfile()" class="text-2xl font-bold mb-8 cursor-pointer hover:underline">Client Panel</h2>
     <nav class="flex flex-col space-y-4">
       <button onclick="loadSection('myBookings')" class="hover:bg-orange-500 px-3 py-2 rounded text-left">My Bookings</button>
