--- a/signup.html
+++ b/signup.html
@@ -121,7 +121,7 @@
 
   if (passwordInput.type === "password") {
     passwordInput.type = "text";
-    toggleIcon.textContent = "🔒"; // Now it's visible
+    toggleIcon.textContent = "🙈"; // Now it's visible
     toggleIcon.title = "Hide Password";
   } else {
     passwordInput.type = "password";
