--- a/client_home.html
+++ b/client_home.html
@@ -32,9 +32,12 @@
   </header>
 
   <!-- Search Bar -->
-  <div class="flex justify-center mt-6 px-4">
-    <input type="text" placeholder="Search for venues, restaurants, hotels..." class="w-full max-w-xl px-5 py-3 rounded-full border border-gray-300 shadow-sm focus:outline-none focus:ring-2 focus:ring-orange-300" />
-  </div>
+<div class="flex justify-center mt-6 px-4">
+  <input id="searchInput" type="text" placeholder="Search for venues..." class="w-full max-w-xl px-5 py-3 rounded-full border border-gray-300 shadow-sm focus:outline-none focus:ring-2 focus:ring-orange-300" />
+  <button onclick="searchVenues()" class="ml-2 bg-orange-500 text-white px-5 py-2 rounded-full hover:bg-orange-600">Search</button>
+</div>
+<div id="searchResults" class="max-w-4xl mx-auto mt-6 px-4"></div>
+
 
   <!-- Category Buttons -->
   <div class="flex justify-center flex-wrap gap-3 mt-6 px-4">
@@ -83,6 +86,44 @@
       const scrollAmount = 200;
       container.scrollBy({ left: scrollAmount * direction, behavior: 'smooth' });
     }
+    async function searchVenues() {
+  const query = document.getElementById('searchInput').value.trim();
+  const resultsDiv = document.getElementById('searchResults');
+  resultsDiv.innerHTML = ''; // Clear previous results
+
+  if (!query) {
+    resultsDiv.innerHTML = '<p class="text-gray-600 text-center">Please enter a venue name.</p>';
+    return;
+  }
+
+  try {
+    const res = await fetch(`http://localhost:5000/api/venues?name=${encodeURIComponent(query)}`);
+    const venues = await res.json();
+
+    if (res.ok && venues.length > 0) {
+      resultsDiv.innerHTML = venues.map(venue => `
+        <div class="bg-white shadow rounded-lg p-4 mb-4 hover:bg-orange-50 transition">
+          <h4 class="text-lg font-semibold text-orange-600">${venue.name}</h4>
+          <p><strong>Location:</strong> ${venue.location}</p>
+          <p><strong>Capacity:</strong> ${venue.capacity}</p>
+          <p><strong>Price:</strong> ${venue.price}</p>
+          <button onclick="bookVenue(${venue.id})" class="mt-2 px-4 py-2 bg-orange-500 text-white rounded hover:bg-orange-600">Book Now</button>
+        </div>
+      `).join('');
+    } else {
+      resultsDiv.innerHTML = '<p class="text-red-500 text-center">No venues found.</p>';
+    }
+  } catch (error) {
+    console.error('Search error:', error);
+    resultsDiv.innerHTML = '<p class="text-red-500 text-center">Server error while searching.</p>';
+  }
+}
+
+// Redirect function
+function bookVenue(venueId) {
+  window.location.href = `client_bookingm.html?venueId=${venueId}`;
+}
+
   </script>
 
 </body>
